netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol1
  namespace: n1
spec:
  podSelector:
    matchLabels:
       k1: v1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
           k2: v2
      namespaceSelector: {}
